Added "shelf" input type=text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <input type="date" name="date" placeholder="Please specify a date" required>
             <label for="quantity">quantity:</label>
             <input type="number" name="quantity" required>
+            <label for="shelf">shelf:</label>
+            <input type="text" name="text" required>
+
 
             <input type="submit" value="Submit">
           </form>
