--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </section>
             <label for="isbn">ISBN:</label>
             <input type="number" name="isbn" required>
-            <label for="sellingPrice">selling price:</label>
-            <input type="number" name="sellingPrice" required>
+            <label for="´publisherPrice">Publisher price:</label>
+            <input type="number" name="publisherPrice" required>
             <label for="date">date:</label>
             <input type="date" name="date" placeholder="Please specify a date" required>
             <label for="quantity">quantity:</label>
