changed the name to "shelf"

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="quantity">quantity:</label>
             <input type="number" name="quantity" required>
             <label for="shelf">shelf:</label>
-            <input type="text" name="text" required>
+            <input type="text" name="shelf" required>
 
 
             <input type="submit" value="Submit">
