--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta charset="utf-8">
     <link rel="stylesheet" href="css/meyer-reset.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/main.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="libs/json-to-table.js"></script>
+    <script src="js/main.js"></script>
 		
 	</head>
 	<body>
