--- a/shopowner.html
+++ b/shopowner.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/meyer-reset.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
+    <script src="js/registeredSoldBooks.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		
 	</head>
