changed "sellingdate" into date

--- a/shopowner.html
+++ b/shopowner.html
@@ -21,8 +21,8 @@
             <input type="number" name="isbn" required>
             <label for="amount">amount:</label>
             <input type="number" name="amount" required>
-            <label for="date">sellingDate:</label>
-            <input type="date" name="sellingDate" placeholder="Please specify a date" required>
+            <label for="date">date:</label>
+            <input type="date" name="date" placeholder="Please specify a date" required>
 
 
 
