Fixed the redirect from index.html and content folder.

--- a/content/shopowner.html
+++ b/content/shopowner.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Bookstore Test Title</title>
 		<meta charset="utf-8">
-    <link rel="stylesheet" href="css/meyer-reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/main.js"></script>
-    <script src="js/registeredSoldBooks.js"></script>
+    <link rel="stylesheet" href="../css/meyer-reset.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/main.js"></script>
+    <script src="../js/registeredSoldBooks.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		
 	</head>
