--- a/index.html
+++ b/index.html
@@ -1,38 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Bookstore Test Title</title>
-		<meta charset="utf-8">
-    <link rel="stylesheet" href="css/meyer-reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="libs/json-to-table.js"></script>
-    <script src="js/main.js"></script>
-		
-	</head>
-	<body>
-		<section class="registerBook">
-          <form class="bookRegisteringInfo">
-            <section class="registeringNotify">
-                <div class="registeredSuccess">Successfully registered!</div>
-                <div class="registeredError">Something went wrong, try again!</div>
-            </section>
-            <label for="isbn">ISBN:</label>
-            <input type="number" name="isbn" required>
-            <label for="´publisherPrice">Publisher price:</label>
-            <input type="number" name="publisherPrice" required>
-            <label for="date">date:</label>
-            <input type="date" name="date" placeholder="Please specify a date" required>
-            <label for="quantity">quantity:</label>
-            <input type="number" name="quantity" required>
-            <label for="shelf">shelf:</label>
-            <input type="text" name="shelf" required>
-
-
-            <input type="submit" value="Submit">
-          </form>
-          <section class="registeredBooks">You registered:<p></p></section>
-          <button class="cancelRegistering">Cancel</button>
-      </section>
-	</body>
+<head>
+  <title>Bookshop</title>
+  
+  <meta http-equiv="refresh" content="0;URL='content/inleverans.html'" />  
+</head>
+<body>
+</body>
 </html>
