Started on the nav menu on the html:s we already have.

--- a/content/shopowner.html
+++ b/content/shopowner.html
@@ -11,6 +11,14 @@
 		
 	</head>
 	<body>
+    <header>
+      <ul>
+        <li><a href="hej.html">Kund</a></li>
+        <li><a href="inleverans.html">Inleverans</a></li>
+        <li><a href="hej.html">Sales</a></li>
+        <li><a href="hej.html">Rapport</a></li>
+      </ul>
+    </header>
 		<section class="soldBookRegister">
           <form class="soldBookRegisteringInfo">
             <section class="soldRegisteringNotify">
