Fixed some footers

--- a/content/inleverans.html
+++ b/content/inleverans.html
@@ -42,5 +42,8 @@
           <section class="registeredBooks">You registered:<p></p></section>
           <button class="cancelRegistering">Cancel</button>
       </section>
+    <footer>
+
+    </footer>
 	</body>
 </html>
