--- a/content/shopowner.html
+++ b/content/shopowner.html
@@ -38,4 +38,7 @@
           <section class="registeredSoldBooks">You registered:<p></p></section>
           <button class="cancelSoldRegistering">Cancel</button>
       </section>
+    <footer>
+    </footer>
 	</body>
+</html>
