changed the order of the files

--- a/content/shopowner.html
+++ b/content/shopowner.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8">
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
-    <script src="../libs/json-to-table.js"></script>
-    <script src="../js/main.js"></script>
-    <script src="../js/registeredSoldBooks.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-		
+    <script src="../libs/json-to-table.js"></script>
+    <script src="../js/registerSoldBooks.js"></script>
+	
+
 	</head>
 	<body>
     <header>
