Added formular input names "tittle","firstName " and "lastName" in inleveranse and into main.js

--- a/content/inleverans.html
+++ b/content/inleverans.html
@@ -29,6 +29,12 @@
             </section>
             <label for="isbn">ISBN:</label>
             <input type="number" name="isbn" required>
+            <label for="tittle">Tittle:</label>
+            <input type="text" name="tittle" required>
+            <label for="firstName">First Name:</label>
+            <input type="text" name="firstName" required>
+            <label for="lastName">Last Name:</label>
+            <input type="text" name="lastName" required>
             <label for="´publisherPrice">Publisher price:</label>
             <input type="number" name="publisherPrice" required>
             <label for="quantity">quantity:</label>
