--- a/content/inleverans.html
+++ b/content/inleverans.html
@@ -29,17 +29,17 @@
             </section>
             <label for="isbn">ISBN:</label>
             <input type="number" name="isbn" required>
-            <label for="tittle">Tittle:</label>
-            <input type="text" name="tittle" required>
+            <label for="tittle">Title:</label>
+            <input type="text" name="title" required>
             <label for="firstName">First Name:</label>
             <input type="text" name="firstName" required>
             <label for="lastName">Last Name:</label>
             <input type="text" name="lastName" required>
             <label for="´publisherPrice">Publisher price:</label>
             <input type="number" name="publisherPrice" required>
-            <label for="quantity">quantity:</label>
+            <label for="quantity">Quantity:</label>
             <input type="number" name="quantity" required>
-            <label for="shelf">shelf:</label>
+            <label for="shelf">Shelf:</label>
             <input type="text" name="shelf" required>
 
 
