Added css to forms both forms, fixed capitalisation on Amount in shopowner.html

--- a/content/shopowner.html
+++ b/content/shopowner.html
@@ -28,7 +28,7 @@
             </section>
             <label for="isbn">ISBN:</label>
             <input type="number" name="isbn" required>
-            <label for="amount">amount:</label>
+            <label for="amount">Amount:</label>
             <input type="number" name="amount" required>
 
 
