changed name to delivery.html instead of inleverans.html and sales.html instead of shopowner.html

--- a/content/sales.html
+++ b/content/sales.html
@@ -15,7 +15,7 @@
     <header>
       <ul>
         <li><a href="hej.html">Kund</a></li>
-        <li><a href="inleverans.html">Inleverans</a></li>
+        <li><a href="delivery.html">Delivery</a></li>
         <li><a href="hej.html">Sales</a></li>
         <li><a href="hej.html">Rapport</a></li>
       </ul>
