--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Bookshop</title>
   
-  <meta http-equiv="refresh" content="0;URL='content/inleverans.html'" />  
+  <meta http-equiv="refresh" content="0;URL='content/delivery.html'" />  
 </head>
 <body>
 </body>
