Added h2 title to both forms

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bookstore Test Title</title>
+		<title>Bookstore Delivery</title>
 		<meta charset="utf-8">
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -22,7 +22,8 @@
 
     </header>
 		<section class="registerBook">
-          <form class="bookRegisteringInfo">
+            <h2>Delivery Form</h2>
+            <form class="bookRegisteringInfo">
             <section class="registeringNotify">
                 <div class="registeredSuccess">Successfully registered!</div>
                 <div class="registeredError">Something went wrong, try again!</div>
