--- a/content/sales.html
+++ b/content/sales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bookstore Test Title</title>
+		<title>Bookstore Sales</title>
 		<meta charset="utf-8">
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -21,6 +21,7 @@
       </ul>
     </header>
 		<section class="soldBookRegister">
+      <h2>Sales Form</h2>
           <form class="soldBookRegisteringInfo">
             <section class="soldRegisteringNotify">
                 <div class="soldRegisteredSuccess">Successfully registered!</div>
