Added sales.html to nav.

--- a/content/sales.html
+++ b/content/sales.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="hej.html">Kund</a></li>
         <li><a href="delivery.html">Delivery</a></li>
-        <li><a href="hej.html">Sales</a></li>
+        <li><a href="sales.html">Sales</a></li>
         <li><a href="hej.html">Rapport</a></li>
       </ul>
     </header>
