Added a <main> to the html files and fixed some css

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -18,9 +18,9 @@
         <li><a href="sales.html">Sales</a></li>
         <li><a href="hej.html">Rapport</a></li>
       </ul>
-
-
     </header>
+
+    <main>
 		<section class="registerBook">
             <h2>Delivery Form</h2>
             <form class="bookRegisteringInfo">
@@ -48,7 +48,9 @@
           </form>
           <section class="registeredBooks">You registered:<p></p></section>
           <button class="cancelRegistering">Cancel</button>
-      </section>
+        </section>
+    </main>
+
     <footer>
 
     </footer>
