Inserted ../ to find the php file

--- a/content/sales.html
+++ b/content/sales.html
@@ -33,8 +33,8 @@
           </section>
             <label for="isbn">ISBN:</label>
             <input type="number" name="isbn" required>
-            <label for="amout">Amount:</label>
-            <input type="number" name="amout" required>
+            <label for="amount">Amount:</label>
+            <input type="number" name="amount" required>
 
             <input type="submit" value="Submit">
         </form>
