--- a/content/sales.html
+++ b/content/sales.html
@@ -38,8 +38,8 @@
 
             <input type="submit" value="Submit">
         </form>
-          <section class="registeredSoldBooks">You registered:<p></p></section>
-          <button class="cancelSoldRegistering">Cancel</button>  
+          <section class="registeredSoldBooks">You registered the books</section>
+          <section class="cancelSoldRegistering">Error, try again</section>  
       </section>
 
       <section class="updatePrice">
