Made some changes to js. Changed amount to qty (quantity).

--- a/content/sales.html
+++ b/content/sales.html
@@ -8,7 +8,6 @@
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="../libs/json-to-table.js"></script>
     <script src="../js/registerSoldBooks.js"></script>
-    <script src="../libs/sql-ajax-json.php"></script>
 	
 
 	</head>
@@ -33,8 +32,8 @@
           </section>
             <label for="isbn">ISBN:</label>
             <input type="number" name="isbn" required>
-            <label for="amount">Amount:</label>
-            <input type="number" name="amount" required>
+            <label for="qty">Quantity:</label>
+            <input type="number" name="qty" required>
 
             <input type="submit" value="Submit">
         </form>
