--- a/content/delivery.html
+++ b/content/delivery.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="../libs/json-to-table.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/delivery.js"></script>
 		
 	</head>
 	<body>
