changed quantity into qty

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -38,8 +38,8 @@
             <input type="text" name="lastName" required>
             <label for="´publisherPrice">Publisher price:</label>
             <input type="number" name="publisherPrice" required>
-            <label for="quantity">Quantity:</label>
-            <input type="number" name="quantity" required>
+            <label for="qty">Quantity:</label>
+            <input type="number" name="qty" required>
             <label for="shelf">Shelf:</label>
             <input type="text" name="shelf" required>
 
