--- a/content/sales.html
+++ b/content/sales.html
@@ -16,10 +16,10 @@
 	<body>
     <header>
       <ul>
-        <li><a href="hej.html">Kund</a></li>
+        <li><a href="customer.html">Kund</a></li>
         <li><a href="delivery.html">Delivery</a></li>
         <li><a href="sales.html">Sales</a></li>
-        <li><a href="hej.html">Rapport</a></li>
+        <li><a href="report.html">Rapport</a></li>
       </ul>
     </header>
 
