changed firstName into fname and lastName into lname, changed the sql question into register author,

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -31,10 +31,10 @@
             <input type="number" name="isbn" required>
             <label for="tittle">Title:</label>
             <input type="text" name="title" required>
-            <label for="firstName">First Name:</label>
-            <input type="text" name="firstName" required>
-            <label for="lastName">Last Name:</label>
-            <input type="text" name="lastName" required>
+            <label for="fname">First Name:</label>
+            <input type="text" name="fname" required>
+            <label for="lname">Last Name:</label>
+            <input type="text" name="lname" required>
             <label for="´publisherPrice">Publisher price:</label>
             <input type="number" name="publisherPrice" required>
             <label for="qty">Quantity:</label>
