jag har fixat uppdate price.

--- a/content/sales.html
+++ b/content/sales.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="../libs/json-to-table.js"></script>
-    <script src="../js/registerSoldBooks.js"></script>
     <script src="../js/sales.js"></script>
-    
+    <script src="../js/updatePrice.js"></script>
 	
 
 	</head>
@@ -48,6 +46,7 @@
 
         <form class="updatePriceInfo">
           <section class="UpdatePriceNotify">
+			<div class="bookNoExist"> This book doesn't exist in the book store!</div>
             <div class="updatePriceSuccess">Successfully registered!</div>
             <div class="updatePriceError">Something went wrong, try again!</div>
           </section>
