Big changes in delivery.js, we can register everything now if it's new. Only bug is my maths thing isn't working :( Other small changes here & there.

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -28,19 +28,20 @@
                 <div class="registeredError">Something went wrong, try again!</div>
             </section>
             <label for="isbn">ISBN:</label>
-            <input type="number" name="isbn" required><button class="CheckIfIsbnExist">Check if the ISBN already exist</button>
-            <label for="tittle">Title:</label>
+            <input type="number" name="isbn" required>
+            <button class="CheckIfIsbnExist">Check if the ISBN already exist</button>
+            <label for="title">Title:</label>
             <input type="text" name="title" required>
             <label for="fname">First Name:</label>
             <input type="text" name="fname" required>
             <label for="lname">Last Name:</label>
             <input type="text" name="lname" required>
-            <label for="´publisherPrice">Publisher price:</label>
-            <input type="number" name="publisherPrice" required>
-            <label for="qty">Quantity:</label>
-            <input type="number" name="qty" required>
-            <label for="shelf">Shelf:</label>
-            <input type="text" name="shelf" required>
+            <label for="fprice">Publisher price:</label>
+            <input type="number" name="fprice" required>
+            <label for="quantity">Quantity:</label>
+            <input type="number" name="quantity" required>
+            <label for="shelfNr">Shelf:</label>
+            <input type="text" name="shelfNr" required>
 
 
             <input type="submit" value="Submit">
