--- a/content/sales.html
+++ b/content/sales.html
@@ -27,18 +27,18 @@
 
         <form class="soldBookRegisteringInfo">
           <section class="soldRegisteringNotify">
-            <div class="soldRegisteredSuccess">Successfully registered!</div>
-            <div class="soldRegisteredError">Something went wrong, try again!</div>
+            <span class="soldRegisteredSuccess">Successfully registered!</span>
+            <span class="soldRegisteredError">Something went wrong, try again!</span>
           </section>
             <label for="isbn">ISBN:</label>
-            <input type="number" name="isbn" required>
+            <input type="number" id="isbn" name="isbn" required>
             <label for="qty">Quantity:</label>
-            <input type="number" name="qty" required>
+            <input type="number" id="qty" name="qty" required>
 
             <input type="submit" value="Submit">
         </form>
-          <section class="registeredSoldBooks">You registered the books</section>
-          <section class="cancelSoldRegistering">Error, try again</section>  
+          <span class="registeredSoldBooks">You registered the books</span>
+          <span class="cancelSoldRegistering">Error, try again</span>  
       </section>
 
       <section class="updatePrice">
@@ -46,18 +46,17 @@
 
         <form class="updatePriceInfo">
           <section class="UpdatePriceNotify">
-			<div class="bookNoExist"> This book doesn't exist in the book store!</div>
-            <div class="updatePriceSuccess">Successfully registered!</div>
-            <div class="updatePriceError">Something went wrong, try again!</div>
+			<span class="bookNoExist"> This book doesn't exist in the book store!</span>
+            <span class="updatePriceSuccess">Successfully registered!</span>
+            <span class="updatePriceError">Something went wrong, try again!</span>
           </section>
             <label for="isbn">ISBN:</label>
-            <input type="number" name="isbn" required>
+            <input type="number" id="isbn" name="isbn" required>
             <label for="salePrice">Sales Price:</label>
-            <input type="number" name="salePrice" required>
+            <input type="number" id="salePrice" name="salePrice" required>
 
             <input type="submit" value="Submit">
         </form>
-          <section class="registeredUpdatePrice">Price update:<p></p></section>
           
       </section>
     </main>
