--- a/content/customer.html
+++ b/content/customer.html
@@ -20,6 +20,19 @@
     </header>
 
     <main>
+         <section class="customerForm">
+            <h2>Customer Search</h2>
+            <form class="customerInfo">
+            
+            <label for="isbn">ISBN:</label>
+            <input type="number" name="isbn" required>
+            <label for="title">Title:</label>
+            <input type="text" name="title" required>
+            <label for="fname">Author First Name:</label>
+            <input type="text" name="fname" required>
+            <label for="lname">Author Last Name:</label>
+            <input type="text" name="lname" required>
+        </section>
 	
     </main>
 
