Updated files, so name are same as database

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -35,10 +35,10 @@
             <input type="text" name="lname" required>
             <label for="fprice">Publisher price:</label>
             <input type="number" name="fprice" required>
-            <label for="quantity">Quantity:</label>
-            <input type="number" name="quantity" required>
-            <label for="shelfNr">Shelf:</label>
-            <input type="text" name="shelfNr" required>
+            <label for="qty">Quantity:</label>
+            <input type="number" name="qty" required>
+            <label for="shelf_id">Shelf:</label>
+            <input type="text" name="shelf_id" required>
 
 
             <input type="submit" value="Submit">
