Started on customer js.

--- a/content/customer.html
+++ b/content/customer.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="../js/delivery.js"></script>
+    <script src="../js/customer.js"></script>
 		
 	</head>
 	<body>
@@ -20,21 +20,21 @@
     </header>
 
     <main>
-        <section class="customerForm">
-        <h2>Customer Search</h2>
-            <form class="customerInfo">
+         <section class="customerForm">
+            <h2>Customer Search</h2>
+                <form class="customerInfo">
             
-                <label for="isbn">ISBN:</label>
-                <input type="number" name="isbn" required>
-                <label for="title">Title:</label>
-                <input type="text" name="title" required>
-                <label for="fname">Author First Name:</label>
-                <input type="text" name="fname" required>
-                <label for="lname">Author Last Name:</label>
-                <input type="text" name="lname" required>
+                    <label for="isbn">ISBN:</label>
+                    <input type="number" name="isbn" required>
+                    <label for="title">Title:</label>
+                    <input type="text" name="title" required>
+                    <label for="fname">Author First Name:</label>
+                    <input type="text" name="fname" required>
+                    <label for="lname">Author Last Name:</label>
+                    <input type="text" name="lname" required>
 
-                <input type="submit" value="Submit">
-            </form>
+                    <input type="submit" value="Submit">
+                </form>
         </section>
 	
     </main>
