Fixed some in the customer html form.

--- a/content/customer.html
+++ b/content/customer.html
@@ -25,13 +25,13 @@
                 <form class="customerInfo">
             
                     <label for="isbn">ISBN:</label>
-                    <input type="number" name="isbn" required>
+                    <input type="number" name="isbn">
                     <label for="title">Title:</label>
-                    <input type="text" name="title" required>
+                    <input type="text" name="title">
                     <label for="fname">Author First Name:</label>
-                    <input type="text" name="fname" required>
+                    <input type="text" name="fname">
                     <label for="lname">Author Last Name:</label>
-                    <input type="text" name="lname" required>
+                    <input type="text" name="lname">
 
                     <input type="submit" value="Submit">
                 </form>
