Added id's in delivery.html (its easier to export in html with  "id" than "name"), creating ajax and sql question in delivery.js

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -25,20 +25,20 @@
             <form class="bookRegisteringInfo">
             
             <label for="isbn">ISBN:</label>
-            <input type="number" name="isbn" required>
+            <input type="number" name="isbn" id ="isbn" required>
             <!-- <button class="CheckIfIsbnExist">Check if the ISBN already exist</button> -->
             <label for="title">Title:</label>
-            <input type="text" name="title" required>
+            <input type="text" name="title" id ="title"required>
             <label for="fname">First Name:</label>
-            <input type="text" name="fname" required>
+            <input type="text" name="fname" id ="fname" required>
             <label for="lname">Last Name:</label>
-            <input type="text" name="lname" required>
+            <input type="text" name="lname" id ="lname" required>
             <label for="fprice">Publisher price:</label>
-            <input type="number" name="fprice" required>
+            <input type="number" name="fprice" id ="fprice"required>
             <label for="qty">Quantity:</label>
-            <input type="number" name="qty" required>
+            <input type="number" name="qty" id ="qty" required>
             <label for="shelf_id">Shelf:</label>
-            <input type="text" name="shelf_id" required>
+            <input type="text" name="shelf_id" id ="shelf_id"required>
 
 
             <input type="submit" value="Submit">
