--- a/content/delivery.html
+++ b/content/delivery.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="../js/showEverythingIfIsbnExist.js"></script>
     <script src="../js/delivery.js"></script>
+
 		
 	</head>
 	<body>
