--- a/content/delivery.html
+++ b/content/delivery.html
@@ -30,17 +30,17 @@
             <input type="number" name="isbn" id ="isbn" required>
              <button class="CheckIfIsbnExist">Check if the ISBN already exist</button> 
             <label for="title">Title:</label>
-            <input type="text" name="title" id ="title"required>
+            <input class="touchless" type="text" name="title" id ="title"required>
             <label for="fname">First Name:</label>
-            <input type="text" name="fname" id ="fname" required>
+            <input class="touchless" type="text" name="fname" id ="fname" required>
             <label for="lname">Last Name:</label>
-            <input type="text" name="lname" id ="lname" required>
+            <input class="touchless" type="text" name="lname" id ="lname" required>
             <label for="fprice">Publisher price:</label>
-            <input type="number" name="fprice" id ="fprice"required>
+            <input class="touchless" type="number" name="publisher_price" id ="publisher_price"required>
             <label for="qty">Quantity:</label>
             <input type="number" name="qty" id ="qty" required>
             <label for="shelf_id">Shelf:</label>
-            <input type="text" name="shelf_id" id ="shelf_id"required>
+            <input class="touchless" type="text" name="shelf_id" id ="shelf_id"required>
 
 
             <input type="submit" value="Submit">
@@ -48,6 +48,7 @@
 
           <span class="registeredNewBook">A new book has been registered!</span>
           <span class="bookFound">Book already exists. Price and quantity registered!</span>
+          
           
           <!-- <button class="cancelRegistering">Cancel</button> -->
         </section>
