We have a problem, I export info from the view "registry_book" column publisher_price, but delivery.js have a different naming for publisher_price= "fprice".

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -35,12 +35,12 @@
             <input class="touchless" type="text" name="fname" id ="fname" required>
             <label for="lname">Last Name:</label>
             <input class="touchless" type="text" name="lname" id ="lname" required>
-            <label for="fprice">Publisher price:</label>
+            <label for="publisher_price">Publisher price:</label>
             <input class="touchless" type="number" name="publisher_price" id ="publisher_price"required>
             <label for="qty">Quantity:</label>
             <input type="number" name="qty" id ="qty" required>
             <label for="shelf_id">Shelf:</label>
-            <input class="touchless" type="text" name="shelf_id" id ="shelf_id"required>
+            <input class="touchless"type="text" name="shelf_id" id ="shelf_id"required>
 
 
             <input type="submit" value="Submit">
