Some more fixing on nav

--- a/content/customer.html
+++ b/content/customer.html
@@ -23,11 +23,11 @@
 
          <section class="customerForm">
             <h2>Customer Search</h2>
-            <select>
+            <select class="optionsMenu">
                 <option value="Search options">Search Options</option>
-                <option value="isbn">Search by ISBN</option>
-                <option value="title">Search by title</option>
-                <option value="author">Search by author</option>
+                <option value="isbn">Search book by ISBN</option>
+                <option value="title">Search book by title</option>
+                <option value="author">Search book by author</option>
             </select>
 
 
