integrated the id's with the label for.....; month month , year year.....

--- a/content/report.html
+++ b/content/report.html
@@ -27,14 +27,14 @@
                 <label for="title">Title:</label>
                 <input type="text" name="title" id ="title"required>
 
-                <label for="q1a1">week</label>
-                <input type="radio" name="q1" id="q1a1" class="week">
+                <label for="week">week</label>
+                <input type="radio" name="q1" id="week" class="week">
 
-                <label for="q1a2">month</label>
-                <input type="radio" name="q1" id="q1a2" class="month">
+                <label for="month">month</label>
+                <input type="radio" name="q1" id="month" class="month">
 
-                <label for="q1a3">year</label>
-                <input type="radio" name="q1" id="q1a3" class="year">
+                <label for="year">year</label>
+                <input type="radio" name="q1" id="year" class="year">
 
                 <div class="report">Report of the earnings</div>
 
