Fixed user msgs placement, added section around html with user msgs

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -46,9 +46,10 @@
             <input type="submit" value="Submit">
           </form>
 
+        <section class="registeringNotify">
           <span class="registeredNewBook">A new book has been registered!</span>
           <span class="bookFound">Book already exists. Price and quantity registered!</span>
-          
+        </section>  
           
           <!-- <button class="cancelRegistering">Cancel</button> -->
         </section>
