--- a/content/sales.html
+++ b/content/sales.html
@@ -34,8 +34,13 @@
 
             <input type="submit" value="Submit">
         </form>
+
+        <section class="soldRegisteringNotify">
           <span class="registeredSoldBooks">You registered the books</span>
           <span class="cancelSoldRegistering">Error, try again</span>  
+
+        </section>
+
       </section>
 
       <section class="updatePrice">
@@ -50,9 +55,12 @@
 
           <input type="submit" value="Submit">
         </form>
+
+      <section class="UpdatePriceNotify">
         <span class="priceUpdated">You have updated the sales price!</span>
         <span class="bookNoExist">This book doesn't exist in the book store!</span>
         <span class="updatePriceError">Something went wrong, try again!</span>
+      </section>
           
       </section>
     </main>
