working on customer search result, can print data from database

--- a/content/customer.html
+++ b/content/customer.html
@@ -68,7 +68,7 @@
                   <span class="searchFname">First Name</span>
                   <span Class="searchLname">Last Name</span>
                   <span class="searchPrice">Price</span>
-                  <span class="searchQty">In Stock</span>
+                  <span class="searchInStock">In Stock</span>
                   <span class="searchShelf">Shelf</span>
                
                 </article>
