changed the name of the input id called publisher_price into fprice in delivery.js and showEverythingIfIsbnExist.js so delivery.js(registerDelivery()) can pick up the new quantities of the old book and register..

--- a/content/delivery.html
+++ b/content/delivery.html
@@ -36,7 +36,7 @@
             <label for="lname">Last Name:</label>
             <input class="touchless" type="text" name="lname" id ="lname" required>
             <label for="publisher_price">Publisher price:</label>
-            <input class="touchless" type="number" name="publisher_price" id ="publisher_price"required>
+            <input class="touchless" type="number" name="fprice" id ="fprice"required>
             <label for="qty">Quantity:</label>
             <input type="number" name="qty" id ="qty" required>
             <label for="shelf_id">Shelf:</label>
