Changed the outlook of the report.html. Hugo recommended a different way of calculating the earnings(from one date to another date instead of week, month, year...

--- a/content/report.html
+++ b/content/report.html
@@ -27,14 +27,12 @@
                 <label for="title">Title:</label>
                 <input type="text" name="title" id ="title"required>
 
-                <label for="week">week</label>
-                <input type="radio" name="q1" id="week" class="week">
+                <label for="startingdate">from</label>
+                <input type="date" name="endingdate" id="startingdate" class="startingdate">
 
-                <label for="month">month</label>
-                <input type="radio" name="q1" id="month" class="month">
+                <label for="endingdate">to</label>
+                <input type="date" name="endingdate" id="endingdate" class="endingdate">
 
-                <label for="year">year</label>
-                <input type="radio" name="q1" id="year" class="year">
 
                 <div class="report">Report of the earnings</div>
 
