Non-significant changes in css and html. Adjusted the size of the report field.

--- a/content/report.html
+++ b/content/report.html
@@ -34,7 +34,7 @@
                 <input type="date" name="endingdate" id="endingdate" class="endingdate">
 
 
-                <div class="report">Report of the earnings</div>
+                <div class="report">Earnings report</div>
 
                 
                 
