jag har fixat sale sidan med båda två former.cheack isbn först sedan för sale price sidan ska ni se  en successfull meddelande med qty and isbn! har fixat html för den sidan också.har lekat lite med jquery för att sidan blir snyggare.

--- a/content/sales.html
+++ b/content/sales.html
@@ -37,7 +37,7 @@
 
         <section class="soldRegisteringNotify">
           <span class="registeredSoldBooks">You registered the books</span>
-          <span class="cancelSoldRegistering">Error, try again</span>  
+          <span class="cancelSoldRegistering">This book doesn't exist in the book store!</span>  
 
         </section>
 
@@ -59,7 +59,6 @@
       <section class="UpdatePriceNotify">
         <span class="priceUpdated">You have updated the sales price!</span>
         <span class="bookNoExist">This book doesn't exist in the book store!</span>
-        <span class="updatePriceError">Something went wrong, try again!</span>
       </section>
           
       </section>
