--- a/content/report.html
+++ b/content/report.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="../js/delivery.js"></script>
+    <script src="../js/report.js"></script>
 		
 	</head>
 	<body>
