--- a/content/delivery.html
+++ b/content/delivery.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="../js/showEverythingIfIsbnExist.js"></script>
+    <!-- // <script src="../js/showEverythingIfIsbnExist.js"></script> -->
     <script src="../js/delivery.js"></script>
 
 		
@@ -36,7 +36,7 @@
             <label for="lname">Last Name:</label>
             <input class="touchless" type="text" name="lname" id ="lname" required>
             <label for="publisher_price">Publisher price:</label>
-            <input class="touchless" type="number" name="fprice" id ="fprice"required>
+            <input type="number" name="fprice" id ="fprice" required>
             <label for="qty">Quantity:</label>
             <input type="number" name="qty" id ="qty" required>
             <label for="shelf_id">Shelf:</label>
