I started with report.js,. You can continue to work on the file I created or delete that file and start from beginning.

--- a/content/report.html
+++ b/content/report.html
@@ -24,7 +24,7 @@
             <h2>Report</h2>
             <form class="bookRegisteringInfo">
             
-                <label for="title">Title:</label>
+                <label for="title">Enter  title:</label>
                 <input type="text" name="title" id ="title"required>
 
                 <label for="startingdate">from</label>
@@ -32,6 +32,7 @@
 
                 <label for="endingdate">to</label>
                 <input type="date" name="endingdate" id="endingdate" class="endingdate">
+                <button class="earningsForDate">Check the earnings for the title for particular date</button>
 
 
                 <div class="report">Earnings report</div>
