Renamed sales.html to sales_price.html, to reflect what it does. Fixed name update in all html files. Changed names in menu

--- a/content/report.html
+++ b/content/report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bookstore Report Page</title>
+		<title>Bookstore Report</title>
 		<meta charset="utf-8">
     <link rel="stylesheet" href="../css/meyer-reset.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -12,10 +12,10 @@
 	<body>
     <header>
       <ul>
-        <li><a href="customer.html">Kund</a></li>
+        <li><a href="customer.html">Customer Search</a></li>
         <li><a href="delivery.html">Delivery</a></li>
-        <li><a href="sales.html">Sales</a></li>
-        <li><a href="report.html">Rapport</a></li>
+        <li><a href="sales_price.html">Sales & Price Update</a></li>
+        <li><a href="report.html">Report</a></li>
       </ul>
     </header>
 
