--- a/content/delivery.html
+++ b/content/delivery.html
@@ -14,10 +14,10 @@
 	<body>
     <header>
       <ul>
-        <li><a href="customer.html">Kund</a></li>
+        <li><a href="customer.html">Customer Search</a></li>
         <li><a href="delivery.html">Delivery</a></li>
-        <li><a href="sales.html">Sales</a></li>
-        <li><a href="report.html">Rapport</a></li>
+        <li><a href="sales_price.html">Sales & Price Update</a></li>
+        <li><a href="report.html">Report</a></li>
       </ul>
     </header>
 
